--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 29
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.jimulabs.googlemusicmock"
         minSdkVersion 19
-        targetSdkVersion 23
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
     }
@@ -28,9 +28,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.jimulabs.mirrorsandbox:mirror-sandbox:0.2.1'
-    compile 'com.android.support:palette-v7:23.1.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.jakewharton:butterknife:7.0.1'
+    implementation 'com.jimulabs.mirrorsandbox:mirror-sandbox:0.2.1'
+    implementation 'androidx.palette:palette:1.0.0'
 }
